--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "waveswsservice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "npm-run-all --parallel watch:server watch:build",
+    "watch:server": "nodemon \"./dist/bundle.js\" --watch \"./build\" ",
+    "watch:build": "webpack --watch",
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "siemarell",
   "license": "ISC",
@@ -12,5 +15,15 @@
     "express": "^4.16.3",
     "rxjs": "^6.2.1",
     "ws": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/ws": "^5.1.2",
+    "nodemon": "^1.17.5",
+    "npm-run-all": "^4.1.3",
+    "ts-loader": "^4.4.1",
+    "typescript": "^2.9.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6"
   }
 }
