--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
+# Editor-based Rest WSClientHandler
 .idea/httpRequests
 ### Node template
 # Logs
@@ -120,4 +120,5 @@ typings/
 .idea/misc.xml
 .idea/modules.xml
 .idea/waveswsservice.iml
+storage.db
 
