--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "start": "npm-run-all --parallel watch:server watch:build",
+    "dbinit": "node -e \"require('./dist/storage.js').init()\"",
     "watch:server": "nodemon \"./dist/bundle.js\" --watch \"./build\" ",
     "watch:build": "webpack --watch",
     "build": "webpack",
@@ -13,11 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "knex": "^0.14.6",
     "rxjs": "^6.2.1",
+    "sqlite3": "^4.0.0",
+    "uuid": "^3.2.1",
     "ws": "^5.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/knex": "^0.14.14",
+    "@types/sqlite3": "^3.1.3",
+    "@types/uuid": "^3.4.3",
     "@types/ws": "^5.1.2",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
