--- a/package.json
+++ b/package.json
@@ -15,20 +15,31 @@
   "dependencies": {
     "express": "^4.16.3",
     "knex": "^0.14.6",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "rxjs": "^6.2.1",
     "sqlite3": "^4.0.0",
     "uuid": "^3.2.1",
     "ws": "^5.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/chai-http": "^3.0.4",
     "@types/express": "^4.16.0",
     "@types/knex": "^0.14.14",
+    "@types/mocha": "^5.2.2",
+    "@types/request": "^2.47.0",
+    "@types/request-promise": "^4.1.41",
     "@types/sqlite3": "^3.1.3",
     "@types/uuid": "^3.4.3",
     "@types/ws": "^5.1.2",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "npm-run-all": "^4.1.3",
     "ts-loader": "^4.4.1",
+    "ts-node": "^6.1.1",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6"
