--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+sandbox.js
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -122,3 +123,4 @@ typings/
 .idea/waveswsservice.iml
 storage.db
 
+.vscode/
