--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ts-node": "^6.1.1",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.6"
+    "webpack-cli": "^3.0.6",
+    "webpack-node-externals": "^1.7.2"
   }
 }
