--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rxjs": "^6.2.1",
     "sqlite3": "^4.0.0",
     "uuid": "^3.2.1",
+    "winston": "^3.0.0",
     "ws": "^5.2.0"
   },
   "devDependencies": {
